# bomradar

./: .travis.yml  README.md  bomradar.cabal  bomradar.nix  changelog.md  default.nix  shell.nix
ci/: ci.nix  jobsets.json  jobsets.nix  release.nix
src-exe/: Main.hs
src/Data/Weather/: BOM.hs
src/Data/Weather/BOM/: Animate.hs  AsConnError.hs  Composite.hs  ConfigurationT.hs  File.hs  Files.hs  Http.hs  OutputDirectory.hs  Run.hs  Transparency.hs  Util.hs
