name:                bomradar
version:             0.1.0.0
synopsis:            BOM weather radar
description:         BOM weather radar
homepage:            https://github.com/qfpl/bomradar
license:             BSD3
license-file:        LICENSE
author:              QFPL
maintainer:          Queensland Functional Programming Lab oᴉ˙ldɟb@llǝʞsɐɥ
copyright:           Copyright (C) 2017 Commonwealth Scientific and Industrial Research Organisation (CSIRO)
category:            Data
build-type:          Simple
extra-source-files:  changelog
cabal-version:       >=1.10
homepage:            https://github.com/qfpl/bomradar
bug-reports:         https://github.com/qfpl/bomradar/issues

source-repository   head
  type:             git
  location:         git@github.com:qfpl/bomradar.git

library
  exposed-modules:     Data.Weather.BOM
  build-depends:       base >=4.9 && <4.10
                     , lens >=4.15 && <4.16
                     , mtl >=2.2 && <2.3
                     , transformers >=0.5.2 && <5.5
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

test-suite             tests
  build-depends:       QuickCheck >=2.9.2 && <2.11
                     , base >=4.9 && <4.10
                     , checkers >=0.4.6 && <0.5
                     , exitcode
                     , lens >=4.15 && <4.16
                     , tasty >=0.11 && <0.12
                     , tasty-hunit >=0.9 && <0.10
                     , tasty-quickcheck >=0.8.4 && <0.10
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
