name:                bomradar
version:             0.1.0.0
synopsis:            BOM weather radar
description:         BOM weather radar.
license:             BSD3
license-file:        LICENCE
author:              QFPL
maintainer:          Queensland Functional Programming Lab oᴉ˙ldɟb@llǝʞsɐɥ
copyright:           Copyright (C) 2017 Commonwealth Scientific and Industrial Research Organisation (CSIRO)
category:            Data
build-type:          Simple
extra-source-files:  changelog.md
cabal-version:       >=1.10
homepage:            https://github.com/qfpl/bomradar
bug-reports:         https://github.com/qfpl/bomradar/issues
tested-with:         GHC == 7.10.3, GHC == 8.0.2, GHC == 8.2.1

source-repository   head
  type:             git
  location:         git@github.com:qfpl/bomradar.git

library
  exposed-modules:     Data.Weather.BOM
                     , Data.Weather.BOM.Animate
                     , Data.Weather.BOM.AsConnError
                     , Data.Weather.BOM.Composite
                     , Data.Weather.BOM.ConfigurationT
                     , Data.Weather.BOM.File
                     , Data.Weather.BOM.Files
                     , Data.Weather.BOM.Http
                     , Data.Weather.BOM.OutputDirectory
                     , Data.Weather.BOM.Run
                     , Data.Weather.BOM.Transparency
                     , Data.Weather.BOM.Util

  build-depends:       base >=4.8 && <4.13
                     , containers
                     , directory
                     , filepath
                     , HTTP
                     , lens >=4.15 && <4.18
                     , mtl >=2.2 && <2.3
                     , network-uri
                     , process
                     , semigroups
                     , transformers >=0.4.1 && <5.5
                     , exitcode
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall

executable bomradar
  default-language:
                    Haskell2010

  hs-source-dirs:
                    src

  main-is:
                    Main.hs

  build-depends:
                      base >=4.8 && <4.13
                    , containers
                    , directory
                    , filepath
                    , HTTP
                    , lens >=4.15 && <4.18
                    , mtl >=2.2 && <2.3
                    , network-uri
                    , process
                    , semigroups
                    , transformers >=0.4.1 && <5.5
                    , exitcode
  ghc-options:
                    -Wall

  other-modules:
                    Data.Weather.BOM

test-suite             tests
  build-depends:       QuickCheck >=2.9.2 && <2.13
                     , base >=4.8 && <4.13
                     , checkers >=0.4.6 && <0.5
                     , bomradar
                     , lens >=4.15 && <4.18
                     , tasty >=0.11 && <1.2
                     , tasty-hunit >=0.9 && <0.11
                     , tasty-quickcheck >=0.8.4 && <0.11
  type:                exitcode-stdio-1.0
  main-is:             Tests.hs
  hs-source-dirs:      test
  default-language:    Haskell2010
  ghc-options:         -Wall
